# CI_demo

./: CMakeLists.txt  README.md
include/: Person.hpp  Vector3.hpp
tests/: CMakeLists.txt  test_person.cpp  test_vector3.cpp
